# triplane

./: .gitignore  CMakeLists.txt  Makefile  README  README.install
data/: LICENSE  fokker.lst
data/application_icon/: triplane-classic.xpm
data/font/: acesfn.pgd  grid2.pgd  grid3.pgd  gridfont.pgd
data/icons/: ase1.pgd  ase2.pgd  ase3.pgd  ase4.pgd
data/levels/: 0-0  0-1  0-2  0-3  0-4  0-5  1-0  1-1  1-2  1-3  1-4  1-5  2-0  2-1  2-2  2-3  2-4  2-5  3-0  3-1  3-2  3-3  3-4  3-5  level1  level2  level3  level4  level5  level6
data/menus/: aces.pgd  aces2.pgd  acesa.pgd  acesb.pgd  alkuval.pgd  allmais2.pgd  allmaisg.pgd  arrow.pgd  buttc.pgd  buttl.pgd  buttok.pgd  buttr.pgd  credi1.pgd  desc1.pgd  desc2.pgd  desc3.pgd  desc4.pgd  desc5.pgd  desc6.pgd  engfac.pgd  engmis.pgd  engmis2.pgd  exit.pgd  feat5.pgd  finfac.pgd  finmis.pgd  finmis2.pgd  fly.pgd  fokkuva3.pgd  fokkuva4.pgd  gerfac.pgd  germis.pgd  germis2.pcx  germis2.pgd  help1.pgd  help2.pgd  help3.pgd  help4.pgd  help5.pgd  japfac.pgd  (+39 more)
data/misc/: arcsin.dta  board.pgd  board2.pgd  bomb.pgd  closed2.pgd  data2.pgd  desc.txt  erreor.pgd  explox.pgd  expls0.pgd  expls1.pgd  expls2.pgd  expls3.pgd  expls4.pgd  expls5.pgd  expls6.pgd  expls7.pgd  flags.pgd  flags0.pgd  flags1.pgd  flags2.pgd  flags3.pgd  flame.pgd  hactiv.pgd  hinact.pgd  hmenu.pgd  hruks.pgd  infan.pgd  infantry.pgd  instop.pgd  it.pgd  itexpl1.pgd  itgun.pgd  lappu1.pgd  lappu2.pgd  mekan1.pgd  mekan2.pgd  mekan3.pgd  ovi.pgd  palasia.pgd  (+22 more)
data/mod/: aces.mod  death.mod  deutch2.mod  english.mod  finnish.mod  japanese.mod  triplane.mod
data/planes/: data1.pgd  savua.pgd  tricrash.pgd
data/terrain/: aut1.pgd  aut2.pgd  aut3.pgd  back1.pgd  back2.pgd  barr2.pgd  barra.pgd  barra2.pgd  birch1.pgd  birch2.pgd  birch3.pgd  bridge.pgd  bush1.pgd  bush2.pgd  cartow.pgd  cbarr2.pgd  cbarra.pgd  cbarra2.pgd  chou1.pgd  chou5.pgd  dbarr2.pgd  dbarra.pgd  dbarra2.pgd  dbir1.pgd  dbir2.pgd  dbir3.pgd  dcbar2.pgd  dcbarr.pgd  dcbarra2.pgd  dchou1.pgd  dchou5.pgd  dfac1.pgd  dfac2.pgd  (+90 more)
data_src/: LICENSE  pcx.lst
debian/: changelog  control  copyright  rules  triplane.desktop  triplane.menu  watch
doc/: TODO  lvledit-keys.txt  mingw32.txt  triplane-classic.6  triplane.6
src/: settings.cpp  settings.h  triplane.cpp  triplane.h
tools/: build-data-from-source  run-all-tests  run-one-test
triplane-testsuite/: README
(+568 files in other folders)
